[package]
name = "rspotify_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
rspotify = {version = "0.13.1",features=["cli", "env-file", "client-reqwest"] }
#rspotify = {version = "0.13.1", features=["cli"]}
tokio = { version = "1.11.0", features = ["full"] }

